<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.kyliePerkins.model.Cart">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="391dp"
        android:layout_height="110dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="291dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="632dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129">

        <ImageView
            android:id="@+id/Back"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/backicon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/product18"
            android:textAlignment="center"
            android:textColor="@color/product2"
            android:textSize="35dp"
            android:textStyle="bold"
            android:translationX="15dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="60dp"
            android:text="@string/product21"
            android:textColor="@color/product5"
            android:textSize="20dp"
            android:translationY="-6dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="395dp"
        android:layout_height="152dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        android:translationY="-150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.555">

        <ImageView
            android:id="@+id/Nike"
            android:layout_width="351dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/nike" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/product5"
            android:textColor="@color/product1"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@color/product6"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/homeicon" />

        <ImageView
            android:id="@+id/Search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/searchicon" />

        <ImageView
            android:id="@+id/Cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/carticon" />

        <ImageView
            android:id="@+id/Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/accounticon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="391dp"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.508">

        <LinearLayout
            android:layout_width="388dp"
            android:layout_height="86dp"
            android:layout_marginBottom="33dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="85dp"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:text="@string/product13"
                android:textColor="@color/product2"
                android:textSize="25dp"
                android:textStyle="italic"
                android:translationY="-5dp" />

            <Button
                android:id="@+id/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/product3"
                android:text="@string/product6"
                android:textColor="#FFFFFF"
                android:translationY="-10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="399dp"
        android:layout_height="92dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.109">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="227dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/product4"
            android:ems="10"
            android:inputType="text"
            android:text="@string/product7"
            android:textAlignment="center"
            android:textColor="@color/product3" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:backgroundTint="@color/product4"
            android:ems="10"
            android:inputType="text"
            android:text="@string/product8"
            android:textAlignment="center"
            android:textColor="@color/product3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="385dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.354">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/product14"
            android:textColor="@color/product1"
            android:textSize="30dp"
            android:textStyle="italic"
            android:translationY="10dp" />

        <Button
            android:id="@+id/CheckOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/product2"
            android:text="@string/product9"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:translationY="5dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>