<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.kyliePerkins.model.Home">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="391dp"
        android:layout_height="110dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="291dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="632dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="401dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:text="@string/product15"
            android:textAlignment="viewStart"
            android:textColor="@color/product2"
            android:textSize="35dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="391dp"
        android:layout_height="158dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="30dp"
            android:text="@string/product16"
            android:textColor="@color/product1"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="251dp"
        android:layout_height="64dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="3dp"
        android:background="@color/product1"
        android:orientation="horizontal"
        android:translationX="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="265dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="@string/product19"
            android:textColor="@color/product3"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="251dp"
        android:layout_height="63dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="3dp"
        android:background="@color/product1"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        android:translationX="-68dp"
        android:translationY="-150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:text="@string/product20"
            android:textColor="@color/product3"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/Login"
        android:layout_width="146dp"
        android:layout_height="64dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="164dp"
        android:backgroundTint="@color/product2"
        android:text="@string/product17"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>